# espnapi

./: README.md  main.py  pyproject.toml
espnapi/: .pre-commit-config.yaml  README.md  config.py  exceptions.py  pyproject.toml
espnapi/.github/workflows/: ci.yml
espnapi/client/: __init__.py  async_client.py  base.py
espnapi/espnapi/: __init__.py  utils.py
espnapi/espnapi/client/: retry.py  sync.py
espnapi/espnapi/models/: athlete.py  event.py  sport.py  team.py  venue.py
espnapi/models/: __init__.py  base.py
espnapi/tests/: __init__.py  conftest.py
espnapi/tests/integration/: conftest.py  test_espn_api.py
espnapi/tests/unit/: test_client_async.py  test_config.py  test_models.py  test_retry.py
examples/: async_teams.py  e2e_flow.py  sync_scoreboard.py
tests/: conftest.py
tests/e2e/: test_e2e_flow.py
tests/integration/: test_espn_api.py
tests/unit/: test_client_sync.py  test_exceptions.py  test_utils.py
